--- a/Elecromobile.html
+++ b/Elecromobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Электромобиль</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.google.com/specimen/Dela+Gothic+One?query=Dela+Gothic+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=CMU+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700&display=swap" rel="stylesheet">
@@ -161,7 +161,7 @@
                     </nav>
                 <div align="right" class="pad">
                     <div class="colorful-border11">
-                        <a href="http://127.0.0.1:5500/avtopark.html">Посмотреть автопарк</a>
+                        <a href="./avtopark.html">Посмотреть автопарк</a>
                     </div>
                 </div>
             </div>
