--- a/avtopark.html
+++ b/avtopark.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Электромобиль</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.google.com/specimen/Dela+Gothic+One?query=Dela+Gothic+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=CMU+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700&display=swap" rel="stylesheet">
@@ -164,10 +164,10 @@
     
         <nav class="beetween2">
             <div class="colorful-border111">
-                <a href="http://127.0.0.1:5501/calculator.html">Калькулятор стоимости аренды</a>
+                <a href="./calculator.html">Калькулятор стоимости аренды</a>
             </div>
             <div class="colorful-border11">
-                <a href="http://127.0.0.1:5502/Elecromobile.html">НАЗАД</a>
+                <a href="./Elecromobile.html">НАЗАД</a>
             </div>
         </nav>
 
