--- a/avtopark.html
+++ b/avtopark.html
@@ -167,7 +167,7 @@
                 <a href="./calculator.html">Калькулятор стоимости аренды</a>
             </div>
             <div class="colorful-border11">
-                <a href="./Elecromobile.html">НАЗАД</a>
+                <a href="./index.html">НАЗАД</a>
             </div>
         </nav>
 
